--- a/Index.html
+++ b/Index.html
@@ -7,9 +7,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
 <body>
-    <h1></h1>
-    <ul></ul>
-    <li>Escola</li>
-    <li>Estudante</li>
+    <header>
+        <h1></h1>
+        <ul>
+            <li>Escola</li>
+            <li>Estudante</li>
+        </ul>
+    </header>
+   
 </body>
 </html>
